<resources>
    <string name="app_name">android-academy-fundamentals</string>
    <string name="back">Back</string>
    <string name="pg">13+</string>
    <string name="name">Avengers:\nEnd Game</string>
    <string name="tag">Action, Adventure, Fantasy</string>
    <string name="reviews">125 Reviews</string>
    <string name="storyline_title">Storyline</string>
    <string name="storyline_content">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="cast_card_one">Robert Downey Jr.</string>
    <string name="cast_card_two">Chris Evans</string>
    <string name="cast_card_three">Mark Ruffalo</string>
    <string name="cast_card_four">Chris Hemsworth</string>
    <string name="movie_list">Movie list</string>
    <string name="movie_list_genres">Action, Adventure, Drama</string>
    <string name="movie_list_movie_name">Avengers: End Game</string>
    <string name="movie_list_movie_duration">137 min</string>
</resources>